--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" >
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Menu Parser</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu-preview.html">Menu Preview</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container py-5">
       <h1 class="mb-4 fw-bold">Menu Parser Login</h1>
       <form id="loginForm" class="card p-4 shadow-sm" style="max-width:400px;margin:auto;">
