--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,10 @@
         <div id="loginError" class="form-text text-danger mt-2"></div>
       </form>
     </div>
-    <script src="services/firebaseConfig.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+    <script src="services/firebaseConfig.js"></script>
     <script src="services/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
